--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@stripe/react-stripe-js": "^4.0.2",
+    "@mantine/core": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@stripe/react-stripe-js": "^5.5.0",
     "@tabler/icons-react": "^3.35.0",
     "next": "15.5.4",
     "react": "19.1.0",
