--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "dependencies": {
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
-    "@stripe/react-stripe-js": "^5.5.0",
+    "@stripe/react-stripe-js": "^4.0.0",
+    "@stripe/stripe-js": "^7.9.0",
     "@tabler/icons-react": "^3.35.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "stripe": "^18.5.0"
+    "stripe": "^17.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
